Fix overflow on widgets.

--- a/client/components/widget/widget-directive.css
+++ b/client/components/widget/widget-directive.css
@@ -70,6 +70,7 @@
 .pk-widget-content {
   background: #ffffff;
   overflow-y: auto;
+  overflow-x: auto;
 }
 
 .pk-container {
